# 0day

./: CONTRIBUTING.md  README-en.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
00-CVE_EXP/CVE-2012-0053/: CVE-2012-0053.js
00-CVE_EXP/CVE-2014-0160--OpenSSL心脏滴血漏洞/: openssl.py
00-CVE_EXP/CVE-2015-1635/: README.md
00-CVE_EXP/CVE-2017-11882/: PS_shell.rb
00-CVE_EXP/CVE-2017-16995 Ubuntu 16.04 本地提权漏洞/: README.md
00-CVE_EXP/CVE-2017-17215/: CVE-2017-17215.py
00-CVE_EXP/CVE-2018-2628-master/: CVE-2018-2628-Getshell.py  CVE-2018-2628-poc.py  README.md  cve-2018-2628.py  push.sh  wlscmd.jsp
00-CVE_EXP/CVE-2019-0708--能够使用exp/: all3389port_ip.csv  cve-2019-0708 (BlueKeepRCE)复现过程记录.docx  ~$e-2019-0708 (BlueKeepRCE)复现过程记录.docx  利用命令.md
00-CVE_EXP/CVE-2019-10758--Mongo expres rce/: （CVE-2019-10758）Mongo expres rce.md
00-CVE_EXP/CVE-2019-1096/: README.md  poc.c
00-CVE_EXP/CVE-2019-13272/: exploit_traceme.c  readme.md
00-CVE_EXP/CVE-2019-18634/: README.md
00-CVE_EXP/CVE-2019-2618 弱口令&任意文件上传漏洞/: README.MD
00-CVE_EXP/CVE-2019-9730/: .gitignore  CxSandbox.sln  README.md
00-CVE_EXP/CVE-2020-1472/: Kernelhub.txt  cve-2020-1472-exploit-200.pcap  cve-2020-1472-production.rules  cve-2020-1472.rules  smb-normal.pcap
00-CVE_EXP/CVE-2020-16898/: CVE-2020-16898.py
00-CVE_EXP/CVE-2020-2551/: CVE-2020-2551.py  README.md
00-CVE_EXP/CVE-2020-28018/: exploit  exploit.c
00-CVE_EXP/CVE-2020-9273/: README.md
00-CVE_EXP/CVE-2021-1732/: ExploitTest.sln
00-CVE_EXP/CVE-2021-21972/: CVE-2021-21972.py  README.md
00-CVE_EXP/CVE-2021-3157/: README.md
00-CVE_EXP/CVE-2021-34486/: CVE-2021-34486.sln
00-CVE_EXP/CVE-2021-42287/: Rubeus-README.md
00-CVE_EXP/CVE-2022-21999/: LICENSE  README.md  SpoolFool.ps1
00-CVE_EXP/CVE-2022-22947/: README.md
00-CVE_EXP/CVE-2022-23131/: README.md  go.mod  go.sum  poc.go
00-CVE_EXP/CVE-2022-3699/: exp.rb  readme.md
00-CVE_EXP/CVE-2023-23397/: exp.ps1
00-CVE_EXP/CVE-2023-36899/: README.md  payload
00-CVE_EXP/CVE-2023-37582/: CVE-2023-37582.py  README.md
00-CVE_EXP/Memcrashed-DDoS-Exploit/: Dockerfile  README.md
00-CVE_EXP/cve-2020-10136/: README.md  cve-2020-10136.rules  ip-in-ip-scan.py
00-CVE_EXP/cve-2020-12695/: README.md  cve-2020-12695.rules
00-CVE_EXP/cve-2020-8597-pptpd/: README.md  cve-2020-8597-pptpd.rules  gre-samples.pcap  pptp_poc.py
00-CVE_EXP/cve-2021-22908/: README.md  cve-2021-22908.py
00-CVE_EXP/cve-2021-3560/: README.md  install.py  search.py
00-CVE_EXP/cve-2021-36955/: README.md
00-CVE_EXP/jad_1.5.8e_oob_write/: README.md  exploit.py
01-通达OA/: POC.py  README.md  用法.txt  路径.txt
02-ActiveMQ/ActiveMQ物理路径泄漏漏洞/: ActiveMQ物理路径泄漏漏洞.md
02-ActiveMQ/（CVE-2015-1830）ActiveMQ 路径遍历导致未经身份验证的rce/: （CVE-2015-1830）ActiveMQ 路径遍历导致未经身份验证的rce.md
02-ActiveMQ/（CVE-2015-5254）ActiveMQ 反序列化漏洞/: （CVE-2015-5254）ActiveMQ 反序列化漏洞.md
02-ActiveMQ/（CVE-2016-3088）ActiveMQ应用漏洞/: （CVE-2016-3088）ActiveMQ应用漏洞.md
02-ActiveMQ/（CVE-2017-15709）ActiveMQ 信息泄漏漏洞/: （CVE-2017-15709）ActiveMQ 信息泄漏漏洞.md
03-Apache & Tomcat/Tomcat/: Tomcat-默认密码.md
03-Apache/Apache后门维持/: Apache后门维持.md
03-Apache/（CVE-2017-15715）Apache解析漏洞/: （CVE-2017-15715）Apache解析漏洞.md
04-Django/（CVE-2018-14574）Django  2.0.8 任意URL跳转漏洞/: （CVE-2018-14574）Django  2.0.8 任意URL跳转漏洞.md
04-Django/（CVE-2019-14234）Django JSONField sql注入漏洞/: （CVE-2019-14234）Django JSONField sql注入漏洞.md
04-Django/（CVE-2020-7471）Django sql注入漏洞/: （CVE-2020-7471）Django sql注入漏洞.md
04-Django/（CVE-2020-9402）Django Geo sql注入/: （CVE-2020-9402）Django Geo sql注入.md
04-Nginx/Nginx 1.20.0 - Denial of Service (DOS)/: README.md
05-Django/（CVE-2017-12794）Django debug page XSS漏洞/: （CVE-2017-12794）Django debug page XSS漏洞.md
05-Docker/Docker 未授权访问/: Docker 未授权访问.md
07-Jenkins/Jenkins 功能未授权访问导致的远程命令执行漏洞/: Jenkins 功能未授权访问导致的远程命令执行漏洞.md
07-Jenkins/（CVE-2017-1000353）Jenkins-CI 远程代码执行漏洞/: （CVE-2017-1000353）Jenkins-CI 远程代码执行漏洞.md
08-Mongo DB/Mongo DB未授权访问/: Mongo DB未授权访问.md
09-宝塔/宝塔 Phpmyadmin 未授权访问漏洞/: 宝塔 Phpmyadmin 未授权访问漏洞.md
09-宝塔/宝塔linux面板小于6.0 存储形xss 0day漏洞getshell/: 宝塔linux面板小于6.0 存储形xss 0day漏洞getshell.md
100-各种CMS/Agilebio Lab Collector Electronic Lab Notebook/: README.md  exp.py
100-各种CMS/online-food-ordering-system/: readme.md
11-齐治堡垒机/齐治堡垒机 任意用户登录漏洞/: README.md
13-致远oa/: 致远OA任意文件下载.docx  致远oa.docx
13-致远oa/致远OA Session泄漏漏洞/: 致远OA Session泄漏漏洞.md
14-VMware/VMware vCenter Server RCE/: CVE-2021-21985.nse
14-VMware/VMware vCenter任意文件读取漏洞/: README.md
14-VMware/VMware vRealize Operations Manager SSRF（CVE-2021-21975）/: REALITY_SMASHER.go
16-泛微OA/泛微OA8前台sql注入/: 泛微OA8前台sql注入.docx
16-泛微OA/泛微OA云桥未授权任意文件读取/: README.md
17-钉钉/: exp.html
18-向日葵远程命令执行/: 向日葵远程命令执行.md
20-Nginx/Nginx 1.20.0 - Denial of Service (DOS)/: poc.py
22-Spring Core/: README.md  exp.py
CVE_EXP/: README.md
CVE_EXP/CVE-2020-9273/proftpd-1.3.7rc2/contrib/mod_auth_otp/: Makefile.in  base32.h  configure.in  db.c  db.h  mod_auth_otp.h.in
CVE_EXP/CVE-2020-9273/proftpd-1.3.7rc2/contrib/mod_auth_otp/t/api/: tests.h
CVE_EXP/CVE-2020-9273/proftpd-1.3.7rc2/contrib/mod_dnsbl/: configure  configure.in  mod_dnsbl.c  mod_dnsbl.h.in
CVE_EXP/CVE-2020-9273/proftpd-1.3.7rc2/contrib/mod_load/: configure.in  mod_load.c  mod_load.c.in  mod_load.h.in
CVE_EXP/CVE-2020-9273/proftpd-1.3.7rc2/contrib/mod_sftp/: auth-kbdint.c  auth-password.c  auth.h  blacklist.c  blacklist.h  cipher.c  compress.c  compress.h  configure.in  crypto.c  date.c  dhparams.pem  display.h  kbdint.c  kex.c  keys.c  keys.h  keystore.h  mac.c  mac.h  misc.c  mod_sftp.h.in  msg.c  packet.c  packet.h  scp.c  service.c  session.h  umac.h
CVE_EXP/CVE-2020-9273/proftpd-1.3.7rc2/contrib/mod_snmp/: Makefile.in  agentx.h  asn1.h  configure  configure.in  db.c  db.h  mib.c  msg.h  notify.c  pdu.c  uptime.h
CVE_EXP/CVE-2020-9273/proftpd-1.3.7rc2/contrib/mod_wrap2/: configure  configure.in  mod_wrap2.c
Thinkphp/: README.md  ThinkPHP6 SESSION任意文件创建漏洞.md
Tomcat/: Apache-Tomcat-Ajp漏洞(CVE-2020-1938)漏洞.md  Tomcat-weekpassword  Tomcat-weekpassword.md
shiro/: README.md
struts2/: README.md
svn_file_disclosure/: README.md  svn_poc.py
(+3307 files in other folders)
